Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/access/VarargsInferredPrivateType.out
VarargsInferredPrivateType.java:16:12: compiler.err.prob.found.req: (compiler.misc.inaccessible.varargs.type: otherpackage.OtherPackage.Private, kindname.class, VarargsInferredPrivateType)
- compiler.note.unchecked.filename: VarargsInferredPrivateType.java
- compiler.note.unchecked.recompile
1 error
